--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: mirecipie
+Package: mirecipe
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Ignacio", "Ferres", email = "igferres@gmail.com", role = c("aut", "cre"))
